--- a/src/communities/communities.html
+++ b/src/communities/communities.html
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link href="CommunitiesStyle.css" rel="stylesheet">
+    <title>DidIt</title>
 </head>
+<header>
+    <h2 style="text-align: center;">Community list</h2>
+</header>
 <body>
-
+<div style="overflow-y: scroll; height:400px;">
+    <label>tesst</label>
+</div>
 </body>
 </html>
