--- a/src/header/header.html
+++ b/src/header/header.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
-    <link href="header/header.css" rel="stylesheet">
+    <link href="../header/header.css" rel="stylesheet">
 
     <meta charset="UTF-8">
     <title>Title</title>
