--- a/src/header/header.html
+++ b/src/header/header.html
@@ -15,7 +15,7 @@
 <header class="header">
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
-            <span class="navbar-brand mx-auto" id="title_navbar">Titre</span>
+            <span class="navbar-brand mx-auto" id="title_navbar"><img class="img rounded custom-title-didit" src="../../assets/img/logo-didit.svg"></span>
             <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#list_header"
                     aria-controls="list_header" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon">
