--- a/app/src/header/header.html
+++ b/app/src/header/header.html
@@ -27,7 +27,7 @@
                         <a class="nav-link active" aria-current="page" href="#">Communautés</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">À propos</a>
+                        <a class="nav-link" href="../../../webpage">À propos</a>
                     </li>
                 </ul>
             </div>
