--- a/webpage/index.html
+++ b/webpage/index.html
@@ -20,9 +20,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/apple-icon.png">
-  <link rel="icon" type="image/png" href="./assets/img/favicon.png">
+  <link rel="icon" type="image/png" href="./assets/img/Logo-D.svg">
   <title>
-    Blk• Design System Pro by Creative Tim
+    Didit • Challenge your Community
   </title>
   <!--     Fonts and icons     -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,700,800" rel="stylesheet" />
@@ -67,129 +67,31 @@
         </div>
         <ul class="navbar-nav ml-auto">
           <li class="dropdown nav-item">
-            <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
-              <i class="fa fa-cogs d-lg-none d-xl-none"></i> Getting started
+            <a href="./sujet.html" class="nav-link">
+              <i class="fas fa-question-circle mt-08" aria-hidden="true"></i>
+             <p>De quoi parle-t-on ?</p>
             </a>
-            <div class="dropdown-menu dropdown-with-icons">
-              <a href="./index.html" class="dropdown-item">
-                <i class="tim-icons icon-paper"></i> Components
-              </a>
-              <a href="./presentation.html" class="dropdown-item">
-                <i class="tim-icons icon-bullet-list-67"></i>Presentation Page
-              </a>
-              <a href="https://demos.creative-tim.com/blk-design-system-pro/docs/1.0/getting-started/overview.html" class="dropdown-item">
-                <i class="tim-icons icon-book-bookmark"></i>Documentation
-              </a>
-            </div>
           </li>
           <li class="nav-item dropdown">
             <a href="#" class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown">
               <i class="tim-icons icon-paper" aria-hidden="true"></i>
-              <p>Sections</p>
+              <p>Documentation</p>
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="./sections.html#headers">
-                <i class="tim-icons icon-app"></i> Headers
+              <a class="dropdown-item" href="./doc-technical.html">
+                <i class="tim-icons icon-app"></i> Documentation Technique
               </a>
-              <a class="dropdown-item" href="./sections.html#features">
-                <i class="tim-icons icon-settings"></i> Features
+              <a class="dropdown-item" href="./politics-content.html">
+                <i class="tim-icons icon-settings"></i> Politique de Contenu
               </a>
-              <a class="dropdown-item" href="./sections.html#blogs">
-                <i class="tim-icons icon-align-left-2"></i> Blogs
+              <a class="dropdown-item" href="./politics-confident.html">
+                <i class="tim-icons icon-align-left-2"></i> Politique de Confidentialité
               </a>
-              <a class="dropdown-item" href="./sections.html#teams">
-                <i class="tim-icons icon-user-run"></i> Teams
-              </a>
-              <a class="dropdown-item" href="./sections.html#projects">
-                <i class="tim-icons icon-paper"></i> Projects
-              </a>
-              <a class="dropdown-item" href="./sections.html#pricing">
-                <i class="tim-icons icon-money-coins"></i> Pricing
-              </a>
-              <a class="dropdown-item" href="./sections.html#testimonials">
-                <i class="tim-icons icon-chat-33"></i> Testimonials
-              </a>
-              <a class="dropdown-item" href="./sections.html#contactus">
-                <i class="tim-icons icon-mobile"></i> Contact Us
-              </a>
-              <a class="dropdown-item" href="./sections.html#tables">
-                <i class="tim-icons icon-chart-bar-32"></i> Tables
-              </a>
-              <a class="dropdown-item" href="./sections.html#accordion">
-                <i class="tim-icons icon-paper"></i> Accordion
-              </a>
-            </div>
-          </li>
-          <li class="nav-item dropdown">
-            <a href="#" class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown">
-              <i class="tim-icons icon-book-bookmark" aria-hidden="true"></i>
-              <p>Examples</p>
-            </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="./examples/about-us.html">
-                <i class="tim-icons icon-bulb-63"></i> About-us
-              </a>
-              <a class="dropdown-item" href="./examples/blog-post.html">
-                <i class="tim-icons icon-align-center"></i> Blog Post
-              </a>
-              <a class="dropdown-item" href="./examples/blog-posts.html">
-                <i class="tim-icons icon-chart-bar-32"></i> Blog Posts
-              </a>
-              <a class="dropdown-item" href="./examples/contact-us.html">
-                <i class="tim-icons icon-square-pin"></i> Contact Us
-              </a>
-              <a class="dropdown-item" href="./examples/landing-page.html">
-                <i class="tim-icons icon-paper"></i> Landing Page
-              </a>
-              <a class="dropdown-item" href="./examples/pricing.html">
-                <i class="tim-icons icon-coins"></i> Pricing
-              </a>
-              <a class="dropdown-item" href="./examples/ecommerce.html">
-                <i class="tim-icons icon-basket-simple"></i> Ecommerce Page
-              </a>
-              <a class="dropdown-item" href="./examples/product-page.html">
-                <i class="tim-icons icon-bag-16"></i> Product Page
-              </a>
-              <a class="dropdown-item" href="./examples/profile-page.html">
-                <i class="tim-icons icon-lock-circle"></i> Profile Page
-              </a>
-              <a class="dropdown-item" href="./examples/error.html">
-                <i class="tim-icons icon-button-power"></i> 404 Error Page
-              </a>
-              <a class="dropdown-item" href="./examples/500-error.html">
-                <i class="tim-icons icon-alert-circle-exc"></i> 500 Error Page
-              </a>
-              <a href="#" class="dropdown-item dropdown-toggle" id="navbarDropdown2" data-toggle="dropdown">
-                <i class="tim-icons icon-book-bookmark" aria-hidden="true"></i> App Pages
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
-                <a class="dropdown-item" href="./examples/account-settings.html">
-                  <i class="tim-icons icon-lock-circle"></i> Account Settings
-                </a>
-                <a class="dropdown-item" href="./examples/login-page.html">
-                  <i class="tim-icons icon-tablet-2"></i> Login Page
-                </a>
-                <a class="dropdown-item" href="./examples/register-page.html">
-                  <i class="tim-icons icon-laptop"></i> Register Page
-                </a>
-                <a class="dropdown-item" href="./examples/reset-page.html">
-                  <i class="tim-icons icon-molecule-40"></i> Reset Page
-                </a>
-                <a class="dropdown-item" href="./examples/invoice-page.html">
-                  <i class="tim-icons icon-notes"></i> Invoice Page
-                </a>
-                <a class="dropdown-item" href="./examples/checkout-page.html">
-                  <i class="tim-icons icon-basket-simple"></i> Checkout Page
-                </a>
-                <a class="dropdown-item" href="./examples/chat-page.html">
-                  <i class="tim-icons icon-email-85"></i> Chat Page
-                </a>
-              </div>
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link btn btn-sm btn-default" href="https://www.creative-tim.com/product/blk-design-system-pro" target="_blank">
-              <p>Buy Now</p>
+            <a class="nav-link btn btn-sm btn-default" href="../app/index.php" target="_blank">
+              <p>Let's go!</p>
             </a>
           </li>
           <!-- <li class="nav-item">
@@ -265,6 +167,22 @@
                   </a>
                 </div>
 
+                <div class="card">
+                  <a href="javascript:;">
+                    <video class="align-middle rounded mw-100" loop autoplay muted>
+                      <source src="assets/videos/dog.mp4" type="video/mp4">
+                    </video>
+                  </a>
+                </div>
+
+                <div class="card">
+                  <a href="javascript:;">
+                    <video class="align-middle rounded mw-100" loop autoplay muted>
+                      <source src="assets/videos/rubiks.mp4" type="video/mp4">
+                    </video>
+                  </a>
+                </div>
+
 
               </div>
 
@@ -287,7 +205,15 @@
                 <div class="card">
                   <a href="javascript:;">
                     <video class="align-middle rounded mw-100" loop autoplay muted>
-                      <source src="assets/videos/basket-kickoff.mp4" type="video/mp4">
+                      <source src="assets/videos/skate.mp4" type="video/mp4">
+                    </video>
+                  </a>
+                </div>
+
+                <div class="card">
+                  <a href="javascript:;">
+                    <video class="align-middle rounded mw-100" loop autoplay muted>
+                      <source src="assets/videos/cat.mp4" type="video/mp4">
                     </video>
                   </a>
                 </div>
@@ -342,14 +268,25 @@
                 <div class="card bg-transparent">
                   <div class="card-body text-center custom-top-30">
                     <h2 class="card-title text-left">
-                      TOP 5 des Communautés en Tendance
+                      Tendances actuelles des communautés
                     </h2>
-                    <p class="card-description text-left">
-                      - 
-                    </p>
+                    <ul class="community-list" class="text-left">
+                      <li><img class="community-logo" src="assets/img/logo-dance.png" />d/MusicalDances</li>
+                      <li><img class="community-logo" src="assets/img/logos-lego.png" />d/Lego  <i class="fas fa-check-circle"></i> </li>
+                      <li><img class="community-logo" src="assets/img/logo-chatmi-thon.png" />d/dumbCatChallenges</li>
+                      <li><img class="community-logo" src="assets/img/logo-workout.png" />d/StreetWorkout</li>
+                      <li><img class="community-logo" src="assets/img/logo-cochondinde.png" />d/CoursesDeCochonDinde</li>
+                    </ul>
                   </div>
                 </div>
 
+              </div>
+            </div>
+            <div class="row justify-content-center">
+              <div class="mt-5">
+                <a class="nav-link btn btn-sm btn-default" href="../app/index.php" target="_blank">
+                  <p class="didit-letsgo mt-1 mb-1">Let's go!</p>
+                </a>
               </div>
             </div>
           </div>
