--- a/app/src/header/header.html
+++ b/app/src/header/header.html
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse" id="list_header">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Communautés</a>
+                        <a class="nav-link active" aria-current="page" href="../communities/communities.php">Communautés</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../../../webpage">À propos</a>
