--- a/webpage/index.html
+++ b/webpage/index.html
@@ -40,7 +40,7 @@
   <nav class="navbar navbar-expand-lg  fixed-top navbar-transparent " color-on-scroll="300">
     <div class="container">
       <div class="navbar-translate">
-        <a class="navbar-brand" href="https://demos.creative-tim.com/blk-design-system-pro/index.html" rel="tooltip" title="Designed and Coded by Creative Tim" data-placement="bottom" target="_blank">
+        <a class="navbar-brand" href="index.html">
           <img class="custom-w-50" src="assets/img/Logo-D.svg">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
@@ -67,7 +67,7 @@
         </div>
         <ul class="navbar-nav ml-auto">
           <li class="dropdown nav-item">
-            <a href="./sujet.html" class="nav-link">
+            <a href="pages/sujet.html" class="nav-link">
               <i class="fas fa-question-circle mt-08" aria-hidden="true"></i>
              <p>De quoi parle-t-on ?</p>
             </a>
@@ -94,24 +94,6 @@
               <p>Let's go!</p>
             </a>
           </li>
-          <!-- <li class="nav-item">
-					<a class="nav-link" rel="tooltip" title="Follow us on Twitter" data-placement="bottom" href="https://twitter.com/CreativeTim" target="_blank">
-						<i class="fab fa-twitter"></i>
-						<p class="hidden-lg-up">Twitter</p>
-					</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="https://www.facebook.com/CreativeTim" target="_blank">
-						<i class="fab fa-facebook-square"></i>
-						<p class="hidden-lg-up">Facebook</p>
-					</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" rel="tooltip" title="Follow us on Instagram" data-placement="bottom" href="https://www.instagram.com/CreativeTimOfficial" target="_blank">
-						<i class="fab fa-instagram"></i>
-						<p class="hidden-lg-up">Instagram</p>
-					</a>
-				</li> -->
         </ul>
       </div>
     </div>
