Changed challenges view

--- a/app/src/header/header.html
+++ b/app/src/header/header.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/bf75784da7.js" crossorigin="anonymous"></script>
 
     <link href="../header/header.css" rel="stylesheet">
 
