Pages Doc + Compression

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -78,13 +78,13 @@
               <p>Documentation</p>
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="./doc-technical.html">
+              <a class="dropdown-item" href="./pages/doc-technical.html">
                 <i class="tim-icons icon-app"></i> Documentation Technique
               </a>
-              <a class="dropdown-item" href="./politics-content.html">
+              <a class="dropdown-item" href="./pages/politics-content.html">
                 <i class="tim-icons icon-settings"></i> Politique de Contenu
               </a>
-              <a class="dropdown-item" href="./politics-confident.html">
+              <a class="dropdown-item" href="./pages/politics-confident.html">
                 <i class="tim-icons icon-align-left-2"></i> Politique de Confidentialité
               </a>
             </div>
@@ -136,7 +136,7 @@
                 <div class="card">
                   <a href="javascript:;">
                     <video class="align-middle rounded mw-100" loop autoplay muted>
-                      <source src="assets/videos/basket-kickoff.mp4" type="video/mp4">
+                      <source src="assets/videos/basket-kickoff2.mp4" type="video/mp4">
                     </video>
                   </a>
                 </div>
@@ -144,7 +144,7 @@
                 <div class="card">
                   <a href="javascript:;">
                     <video class="align-middle rounded mw-100" loop autoplay muted>
-                      <source src="assets/videos/Chantilly2.mp4" type="video/mp4">
+                      <source src="assets/videos/Chantilly3.mp4" type="video/mp4">
                     </video>
                   </a>
                 </div>
@@ -152,7 +152,7 @@
                 <div class="card">
                   <a href="javascript:;">
                     <video class="align-middle rounded mw-100" loop autoplay muted>
-                      <source src="assets/videos/dog.mp4" type="video/mp4">
+                      <source src="assets/videos/dog2.mp4" type="video/mp4">
                     </video>
                   </a>
                 </div>
@@ -160,7 +160,7 @@
                 <div class="card">
                   <a href="javascript:;">
                     <video class="align-middle rounded mw-100" loop autoplay muted>
-                      <source src="assets/videos/rubiks.mp4" type="video/mp4">
+                      <source src="assets/videos/rubiks2.mp4" type="video/mp4">
                     </video>
                   </a>
                 </div>
@@ -179,7 +179,7 @@
                 <div class="card">
                   <a href="javascript:;">
                     <video class="align-middle rounded mw-100" loop autoplay muted>
-                      <source src="assets/videos/pexels-artem-podrez-6003997.mp4" type="video/mp4">
+                      <source src="assets/videos/pexels-artem-podrez-60039972.mp4" type="video/mp4">
                     </video>
                   </a>
                 </div>
@@ -187,7 +187,7 @@
                 <div class="card">
                   <a href="javascript:;">
                     <video class="align-middle rounded mw-100" loop autoplay muted>
-                      <source src="assets/videos/skate.mp4" type="video/mp4">
+                      <source src="assets/videos/skate2.mp4" type="video/mp4">
                     </video>
                   </a>
                 </div>
@@ -195,7 +195,7 @@
                 <div class="card">
                   <a href="javascript:;">
                     <video class="align-middle rounded mw-100" loop autoplay muted>
-                      <source src="assets/videos/cat.mp4" type="video/mp4">
+                      <source src="assets/videos/cat2.mp4" type="video/mp4">
                     </video>
                   </a>
                 </div>
