--- a/webpage/pages/politics-confident.html
+++ b/webpage/pages/politics-confident.html
@@ -66,7 +66,7 @@
         </div>
         <ul class="navbar-nav ml-auto">
           <li class="dropdown nav-item">
-            <a href="pages/sujet.html" class="nav-link">
+            <a href="./sujet.html" class="nav-link">
               <i class="fas fa-question-circle mt-08" aria-hidden="true"></i>
              <p>De quoi parle-t-on ?</p>
             </a>
@@ -100,11 +100,11 @@
   <!-- End Navbar -->
   <div class="wrapper">
     <div class="page-header header-filter">
-      <div class="page-header-image" data-parallax="true" style="background-image: url('../assets/img/pexels-cottonbro-4069292.jpg');"></div>
+      <div class="page-header-image" data-parallax="true" style="background-image: url('../assets/img/signature2.jpg');"></div>
       <div class="container">
         <div class="row">
           <div class="col-md-8 ml-auto mr-auto text-center">
-            <h1 class="title mb-10">Les failles de notre société </br>hyper-connectée</h1>
+            <h1 class="title mb-10">Politique de Confidentialité</h1>
           </div>
         </div>
       </div>
@@ -113,80 +113,25 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 ml-auto mr-auto">
-            <h6 class="category">14 Janvier, 2022</h6>
-            <h3 class="title">Les risques des réseaux</h3>
               <p>
-                  Les réseaux sociaux sont de plus en plus nombreux, et occupent une grande partie du quotidien des jeunes
-                  aujourd’hui. Bien que leur utilisation soit plutôt positive en terme de distraction, ils s’avèrent parfois
-                  être néfastes, et présentent des risques dangereux pour les utilisateurs.
-
-                  Le sujet abordé par notre projet est la conception d’un nouveau réseau social, qui a pour but de mieux
-                  encadrer les activités présentées et limiter les risques d’utilisation.
+                  Didit respecte votre vie privée et ne collecte que les informations que vous lui fournissez.
+                    Nous nous réservons le droit de vendre ces informations à des organisations tierces dans le
+                    but de financer nos activités.
               </p>
-            <br/>
-            <h3 class="title">Détecter les imposteurs</h3>
+              <h3 class="title">Exemples de données</h3>
               <p>
-                  Les faux comptes ne sont pas ce qu’il manque sur les réseaux sociaux, et cela est principalement dû
-                  à la flexibilité de création de comptes pour un but purement commercial. Nous avons voulu agir autrement,
-                  c’est pourquoi une pièce d’identité est requise pour l’inscription. Cela permettra la vérification de
-                  l’utilisateur, ainsi que l’unicité du compte.
+                    Exemples de données que nous sommes susceptibles de collecter : nom, prénoms, adresse,
+                    numéro de téléphone, adresse mail, visage, couleur des yeux et des cheveux, taille, poids,
+                    âge, animaux de compagnie, historique de navigation, favoris, cookies, sites visités, amis,
+                    contacts téléphoniques, journal d'appel, données de la caméra et du microphone, voix,
+                    déplacements de la souris, dynamique de frappe au clavier, centres d'intérêts, groupe
+                    sanguin, signe astrologique, signe du zodiaque chinois, couleur préférée, police de
+                    caractère préférée, diplômes, maladies et allergies, handicaps, religion, orientation
+                    politique, engagement syndical, cartes bancaires, numéro de sécurité sociale, nationalité,
+                    ethnie, sexe.
+                    Cette liste est non exhaustive.
               </p>
-            <br/>
-            <h3 class="title">Contrer le cyber-harcèlement et les propos haineux</h3>
-              <p>
-                  20% des jeunes disent avoir déjà été confrontés au cyber-harcèlement, malheureusement ce problème
-                  ne risque pas de disparaître, mais nous avons pensé à un moyen de le limiter au maximum.
-                  Cela se concrétise notamment par un système de signalement conséquent, puisqu’il dépend du
-                  pourcentage du nombre de membres de la communauté. Une fois qu’un contenu est sufisamment signalé,
-                  il est retiré automatiquement, jusqu’à réapprobation d’un modérateur. En plus de cela, l’utilisateur
-                  ne pourra pas s’inscrire à nouveau puisqu’une pièce d’identité est requise pour le faire.
-              </p>
-            <br/>
-            <h3 class="title">Mieux encadrer les activités</h3>
-              <p>
-                  L’un des problèmes courants dans les communautés des réseaux sociaux actuels est que tout le monde
-                  peut publier du contenu, or ce n’est pas possible sur Didit, seuls les responsables de la communauté
-                  ont la possibilité de créer des défis, ces derniers sont donc moins susceptibles d’être hors-sujet
-                  ou à caractère haineux.
-              </p>
-            <br/>
-            <h3 class="title">De la continuité dans les participations</h3>
-              <p>
-                  Pour inciter les utilisateurs à rester actifs de façon permanente sur l’application, un système
-                  de points est mis en place. L’utilisateur verra alors son score augmenter au sein de la communauté
-                  au fur et à mesure de sa participation aux défis. L’inactivité au bout d’un certain temps a pour
-                  conséquence d’être relégué à un niveau plus bas.
-              </p>
-            <br/>
-            <h3 class="title">Utilisation des données personnelles</h3>
-              <p>
-                  La récupération de données personnelles de l’utilisateur est un sujet critique, mais qui reste
-                  toutefois indispensable pour créer un produit fiable. Grâce aux conditions générales d’utilisation,
-                  on peut obtenir très facilement ces données par l’intermédiaire d’une acceptation
-                  volontaire de l’utilisateur.
-              </p>
-            <br/>
-            <br/>
-            <h3 class="title">Liens utiles</h3>
-            <p class="blockquote">
-              Cyberviolence et cyberharcèlement : approches sociologiques<br/>
-              <a target="_blank" href="https://www.cairn.info/revue-la-nouvelle-revue-de-l-adaptation-et-de-la-scolarisation-2011-1-page-47.htm">Article sur le site du cairn</a>
-            </p>
-            <p class="blockquote">
-              Cyberharcèlement chez les mineurs<br/>
-              <a target="_blank" href="https://www.sciencedirect.com/science/article/abs/pii/S0003448720300718">Article sur le site sciencedirect.com</a>
-            </p>
-            <p class="blockquote">
-              Génération Y: Les jeunes et les réseaux sociaux, de la dérision à la subversion<br/>
-              <a target="_blank" href="https://books.google.fr/books?hl=fr&lr=&id=1G0XAgAAQBAJ&oi=fnd&pg=PA7&dq=critique+r%C3%A9seaux+sociaux&ots=3hzfDXgCj6&sig=gTve0mWwXOyTZ_bF83xY0DJ-F0g&redir_esc=y#v=onepage&q=critique%20r%C3%A9seaux%20sociaux&f=false">Livre de Monique Dagnaud</a>
-            </p>
-            <p class="blockquote">
-              Les réseaux sociaux : un regard critique<br/>
-              <a target="_blank" href="http://barthes.enssib.fr/articles/Guichard-Reseaux-sociaux.pdf">Article sur le site Barthes</a>
-            </p>
-            <br/>
           </div>
-
         </div>
       </div>
     </div>
