--- a/webpage/pages/politics-content.html
+++ b/webpage/pages/politics-content.html
@@ -66,7 +66,7 @@
         </div>
         <ul class="navbar-nav ml-auto">
           <li class="dropdown nav-item">
-            <a href="pages/sujet.html" class="nav-link">
+            <a href="./sujet.html" class="nav-link">
               <i class="fas fa-question-circle mt-08" aria-hidden="true"></i>
              <p>De quoi parle-t-on ?</p>
             </a>
@@ -100,11 +100,11 @@
   <!-- End Navbar -->
   <div class="wrapper">
     <div class="page-header header-filter">
-      <div class="page-header-image" data-parallax="true" style="background-image: url('../assets/img/pexels-cottonbro-4069292.jpg');"></div>
+      <div class="page-header-image" data-parallax="true" style="background-image: url('../assets/img/signature1.jpg');"></div>
       <div class="container">
         <div class="row">
           <div class="col-md-8 ml-auto mr-auto text-center">
-            <h1 class="title mb-10">Les failles de notre société </br>hyper-connectée</h1>
+            <h1 class="title mb-10">Politique de Contenu</h1>
           </div>
         </div>
       </div>
@@ -113,80 +113,102 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 ml-auto mr-auto">
-            <h6 class="category">14 Janvier, 2022</h6>
-            <h3 class="title">Les risques des réseaux</h3>
+            <h3 class="title">Présentation de Didit</h3>
               <p>
-                  Les réseaux sociaux sont de plus en plus nombreux, et occupent une grande partie du quotidien des jeunes
-                  aujourd’hui. Bien que leur utilisation soit plutôt positive en terme de distraction, ils s’avèrent parfois
-                  être néfastes, et présentent des risques dangereux pour les utilisateurs.
+                  Didit est un réseau de communautés créées, gérées et peuplées par les utilisateurs de Didit.
 
-                  Le sujet abordé par notre projet est la conception d’un nouveau réseau social, qui a pour but de mieux
-                  encadrer les activités présentées et limiter les risques d’utilisation.
+                    Dans ces communautés, vous pouvez créer des communautés, les administrer, créer des défis,
+                    mais aussi relever ces défis, les valider, commenter, et ainsi côtoyer des personnes
+                    partageant vos centres d'intérêt.
               </p>
-            <br/>
-            <h3 class="title">Détecter les imposteurs</h3>
               <p>
-                  Les faux comptes ne sont pas ce qu’il manque sur les réseaux sociaux, et cela est principalement dû
-                  à la flexibilité de création de comptes pour un but purement commercial. Nous avons voulu agir autrement,
-                  c’est pourquoi une pièce d’identité est requise pour l’inscription. Cela permettra la vérification de
-                  l’utilisateur, ainsi que l’unicité du compte.
+                    Certaines communautés ne sont peut-être pas faites pour vous (et vous pourriez trouver
+                    certaines d'entre elles inutiles ou mêmes offensantes), mais aucune communauté ne doit être
+                    utilisée comme une arme. Les communautés doivent créer un sentiment d'appartenance pour
+                    leurs membres, et non essayer de diminuer ce sentiment pour plaire à tout le monde. Par
+                    ailleurs, veillez à respecter la vie privée et la sécurité de chacun des membres de Didit.
               </p>
-            <br/>
-            <h3 class="title">Contrer le cyber-harcèlement et les propos haineux</h3>
               <p>
-                  20% des jeunes disent avoir déjà été confrontés au cyber-harcèlement, malheureusement ce problème
-                  ne risque pas de disparaître, mais nous avons pensé à un moyen de le limiter au maximum.
-                  Cela se concrétise notamment par un système de signalement conséquent, puisqu’il dépend du
-                  pourcentage du nombre de membres de la communauté. Une fois qu’un contenu est sufisamment signalé,
-                  il est retiré automatiquement, jusqu’à réapprobation d’un modérateur. En plus de cela, l’utilisateur
-                  ne pourra pas s’inscrire à nouveau puisqu’une pièce d’identité est requise pour le faire.
+                    Chaque communauté sur Didit est créée par un utilisateur appelé administrateur, qui la gère
+                    et qui peut être aidé dans cette tâche par des membres de celle-ci promus au rang de
+                    modérateur. Veuillez respecter les règles des communautés auxquelles vous participez et ne
+                    pas interférer avec celles dont vous n'êtes pas membre.
               </p>
-            <br/>
-            <h3 class="title">Mieux encadrer les activités</h3>
               <p>
-                  L’un des problèmes courants dans les communautés des réseaux sociaux actuels est que tout le monde
-                  peut publier du contenu, or ce n’est pas possible sur Didit, seuls les responsables de la communauté
-                  ont la possibilité de créer des défis, ces derniers sont donc moins susceptibles d’être hors-sujet
-                  ou à caractère haineux.
+                    Au-dessus des règles régissant chaque communauté se trouvent les règles de la plateforme qui
+                    s'appliquent à tout le monde sur Didit. Ces règles sont décidées et appliquées par le staff
+                    de Didit.
+
+                    Didit et ses communautés ne peuvent exister que si chacun respecte les règles établies, et
+                    nous vous demandons non seulement de respecter ces règles à la lettre, mais aussi leur
+                    esprit.
               </p>
             <br/>
-            <h3 class="title">De la continuité dans les participations</h3>
+            <h3 class="title">Règles</h3>
+              <h4 class="title">Règle n°1</h4>
               <p>
-                  Pour inciter les utilisateurs à rester actifs de façon permanente sur l’application, un système
-                  de points est mis en place. L’utilisateur verra alors son score augmenter au sein de la communauté
-                  au fur et à mesure de sa participation aux défis. L’inactivité au bout d’un certain temps a pour
-                  conséquence d’être relégué à un niveau plus bas.
+                  N'oubliez pas l'humain. Didit est un lieu destiné à créer des communautés et à créer un
+                    sentiment d'appartenance, et non à attaquer des groupes de personnes marginalisées ou
+                    vulnérables. Chacun a le droit d'utiliser Didit sans être harcelé, intimidé, ou menacé de
+                    violences. Les communautés et les utilisateurs qui incitent à la violence ou qui encouragent
+                    à la haine fondée sur l'identité ou la vulnérabilité seront bannis.
               </p>
             <br/>
-            <h3 class="title">Utilisation des données personnelles</h3>
+            <h4 class="title">Règle n°2</h4>
               <p>
-                  La récupération de données personnelles de l’utilisateur est un sujet critique, mais qui reste
-                  toutefois indispensable pour créer un produit fiable. Grâce aux conditions générales d’utilisation,
-                  on peut obtenir très facilement ces données par l’intermédiaire d’une acceptation
-                  volontaire de l’utilisateur.
+                  Respectez les régles de la communauté. Publiez du contenu authentique dans les communautés
+                    dont vous êtes membre, et ne trichez pas, ne vous livrez pas à la manipulation de contenu,
+                    ne spammez pas, ne contournez pas les interdictions, et ne perturbez pas les communautés
+                    Didit.
               </p>
             <br/>
+            <h4 class="title">Règle n°3</h4>
+              <p>
+                 Respectez la vie privée d'autrui. Il est interdit d'inciter au harcèlement, par exemple en
+                    révèlant les informations personnelles ou confidentielles d'une personne. Ne postez jamais
+                    ou ne menacez jamais de poster des médias intimes ou sexuellement explicites.
+              </p>
             <br/>
-            <h3 class="title">Liens utiles</h3>
-            <p class="blockquote">
-              Cyberviolence et cyberharcèlement : approches sociologiques<br/>
-              <a target="_blank" href="https://www.cairn.info/revue-la-nouvelle-revue-de-l-adaptation-et-de-la-scolarisation-2011-1-page-47.htm">Article sur le site du cairn</a>
-            </p>
-            <p class="blockquote">
-              Cyberharcèlement chez les mineurs<br/>
-              <a target="_blank" href="https://www.sciencedirect.com/science/article/abs/pii/S0003448720300718">Article sur le site sciencedirect.com</a>
-            </p>
-            <p class="blockquote">
-              Génération Y: Les jeunes et les réseaux sociaux, de la dérision à la subversion<br/>
-              <a target="_blank" href="https://books.google.fr/books?hl=fr&lr=&id=1G0XAgAAQBAJ&oi=fnd&pg=PA7&dq=critique+r%C3%A9seaux+sociaux&ots=3hzfDXgCj6&sig=gTve0mWwXOyTZ_bF83xY0DJ-F0g&redir_esc=y#v=onepage&q=critique%20r%C3%A9seaux%20sociaux&f=false">Livre de Monique Dagnaud</a>
-            </p>
-            <p class="blockquote">
-              Les réseaux sociaux : un regard critique<br/>
-              <a target="_blank" href="http://barthes.enssib.fr/articles/Guichard-Reseaux-sociaux.pdf">Article sur le site Barthes</a>
-            </p>
+            <h4 class="title">Règle n°4</h4>
+              <p>
+                  Ne publiez pas et n'encouragez pas la publication de contenus sexuels ou suggestifs
+                    impliquant des mineurs.
+              </p>
             <br/>
+            <h4 class="title">Règle n°5</h4>
+              <p>
+                  Ne vous faites pas passer pour un individu ou une entité de manière trompeuse ou mensongère.
+              </p>
+            <h4 class="title">Règle n°6</h4>
+              <p>
+                  Veillez à ce que les utilisateurs aient une expérience prévisible sur Didit en étiquetant
+                    correctement les défis et les communautés, et ne publiez pas de contenu graphique,
+                    sexuellement explicite ou offensant.
+              </p>
+            <h4 class="title">Règle n°7</h4>
+              <p>
+                  Restez dans la légalité et évitez de publier du contenu illégal ou de solliciter ou
+                    faciliter des transactions illégales ou interdites.
+              </p>
+            <h4 class="title">Règle n°8</h4>
+              <p>
+                  Ne cassez pas le site et ne faites rien qui interfère avec l'utilisation normale de Didit.
+              </p>
+            <h3 class="title">Mise en application</h3>
+              <p>
+                  Nous disposons de plusieurs moyens pour faire respecter nos règles, notamment, mais pas
+                    exclusivement, les suivants :
+              <ul>
+                    <li>Vous demander gentiment de cesser vos activités</li>
+                    <li>Vous demander moins gentiment</li>
+                    <li>Suspension temporaire ou permanente de comptes</li>
+                    <li>Suspension de privilèges ou ajout de restrictions aux comptes</li>
+                    <li>Ajout de restrictions aux communautés Didit ou mise en quarantaine</li>
+                    <li>Suppression de contenu</li>
+                    <li>Bannissement de communautés Didit</li>
+              </ul>
+              </p>
           </div>
-
         </div>
       </div>
     </div>
