--- a/webpage/pages/politics-content.html
+++ b/webpage/pages/politics-content.html
@@ -89,7 +89,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link btn btn-sm btn-default" href="../app/index.php" target="_blank">
+            <a class="nav-link btn btn-sm btn-default" href="../../app/index.php" target="_blank">
               <p>Let's go!</p>
             </a>
           </li>
