--- a/app/src/header/header.html
+++ b/app/src/header/header.html
@@ -14,7 +14,7 @@
     <title>Title</title>
 </head>
 
-<header class="header">
+<header class="header sticky-top">
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
             <span class="navbar-brand mx-auto" id="title_navbar"><img class="img rounded custom-title-didit" src="../../../webpage/assets/img/logo-didit.svg"></span>
