--- a/webpage/pages/politics-content.html
+++ b/webpage/pages/politics-content.html
@@ -21,7 +21,7 @@
   <link rel="apple-touch-icon" sizes="76x76" href="../assets/img/apple-icon.png">
   <link rel="icon" type="image/png" href="../assets/img/Logo-D.svg">
   <title>
-    Didit • Challenge your Community
+    Didit • Un réseau qui vous veut du bien
   </title>
   <!--     Fonts and icons     -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,700,800" rel="stylesheet" />
@@ -53,8 +53,7 @@
           <div class="row">
             <div class="col-6 collapse-brand">
               <a>
-                BLK•
-                <span> PRO </span>
+                Didit
               </a>
             </div>
             <div class="col-6 collapse-close text-right">
@@ -216,7 +215,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div>
-            <img class="img rounded custom-title-didit-footer" src="../assets/img/logo-didit.svg">
+            <img class="img rounded custom-title-didit-footer w-50" src="../assets/img/logo-didit.svg">
           </div>
         </div>
       </div>
