--- a/webpage/index.html
+++ b/webpage/index.html
@@ -22,7 +22,7 @@
   <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/apple-icon.png">
   <link rel="icon" type="image/png" href="./assets/img/Logo-D.svg">
   <title>
-    Didit • Challenge your Community
+    Didit • Un réseau qui vous veut du bien
   </title>
   <!--     Fonts and icons     -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,700,800" rel="stylesheet" />
@@ -54,8 +54,7 @@
           <div class="row">
             <div class="col-6 collapse-brand">
               <a>
-                BLK•
-                <span> PRO </span>
+                Didit
               </a>
             </div>
             <div class="col-6 collapse-close text-right">
@@ -120,8 +119,8 @@
         <div class="custom-div-title content-center brand">
           <img class="img rounded custom-title-didit" src="assets/img/logo-didit.svg">
         </div>
-        <div class="custom-div-subtitle content-center brand">
-          <h3 class="custom-didit-subtitle">Challenge your community</h3>
+        <div class="custom-div-subtitle t-sm-55 t-md-53 t-lg-59 t-xl-61 content-center brand">
+          <h3 class="custom-didit-subtitle font-size-1 font-md-default">Un réseau qui vous veut du bien</h3>
         </div>
       </div>
     </div>
@@ -131,9 +130,9 @@
         <div class="cards">
           <div class="container">
             <div class="row">
-              <div class="col-md-6 col-lg-3">
+              <div class="col-sm-6 col-md-3">
 
-                <div class="card">
+                <div class="card d-none d-sm-block">
                   <a href="javascript:;">
                     <video class="align-middle rounded mw-100" loop autoplay muted>
                       <source src="assets/videos/basket-kickoff2.mp4" type="video/mp4">
@@ -141,7 +140,7 @@
                   </a>
                 </div>
 
-                <div class="card">
+                <div class="card d-none d-sm-block">
                   <a href="javascript:;">
                     <video class="align-middle rounded mw-100" loop autoplay muted>
                       <source src="assets/videos/Chantilly3.mp4" type="video/mp4">
@@ -149,7 +148,7 @@
                   </a>
                 </div>
 
-                <div class="card">
+                <div class="card d-none d-sm-block">
                   <a href="javascript:;">
                     <video class="align-middle rounded mw-100" loop autoplay muted>
                       <source src="assets/videos/dog2.mp4" type="video/mp4">
@@ -169,14 +168,14 @@
               </div>
 
 
-              <div class="col-md-6 col-lg-3">
+              <div class="d-none d-md-block col-md-3">
 
                 <div class="card">
                 </div>
                 <div class="card">
                 </div>
 
-                <div class="card">
+                <div class="card d-none d-sm-block">
                   <a href="javascript:;">
                     <video class="align-middle rounded mw-100" loop autoplay muted>
                       <source src="assets/videos/pexels-artem-podrez-60039972.mp4" type="video/mp4">
@@ -184,7 +183,7 @@
                   </a>
                 </div>
 
-                <div class="card">
+                <div class="card d-none d-sm-block">
                   <a href="javascript:;">
                     <video class="align-middle rounded mw-100" loop autoplay muted>
                       <source src="assets/videos/skate2.mp4" type="video/mp4">
@@ -192,7 +191,7 @@
                   </a>
                 </div>
 
-                <div class="card">
+                <div class="card d-none d-sm-block">
                   <a href="javascript:;">
                     <video class="align-middle rounded mw-100" loop autoplay muted>
                       <source src="assets/videos/cat2.mp4" type="video/mp4">
@@ -201,7 +200,8 @@
                 </div>
 
               </div>
-              <div class="col-md-8 col-lg-6">
+
+              <div class="col-sm-6 col-md-6">
                 <div class="card bg-transparent">
                   <div class="card-body text-center custom-top-30">
                     <h2 class="card-title text-left">
@@ -247,7 +247,7 @@
                 </div>
 
 
-                <div class="card bg-transparent">
+                <div class="card bg-transparent my-w-100 left-0 w-sm-200 l-sm--100 w-lg-100 l-lg-0">
                   <div class="card-body text-center custom-top-30">
                     <h2 class="card-title text-left">
                       Tendances actuelles des communautés
@@ -264,11 +264,21 @@
 
               </div>
             </div>
-            <div class="row justify-content-center">
-              <div class="mt-5">
-                <a class="nav-link btn btn-sm btn-default" href="../app/index.php" target="_blank">
-                  <p class="didit-letsgo mt-1 mb-1">Let's go!</p>
-                </a>
+            <div class="row mt-5 rounded-2 bg-yellow-didit">
+              <div class="col-md-6 col-lg-5 d-flex justify-content-sm-center justify-content-md-end">
+                <div class="w-75 p-3">
+                  <img class="w-100 id-card" src="assets/img/id-card.png" />
+                </div>
+              </div>
+              <div class="col-md-6 col-lg-7 d-flex flex-column justify-content-center align-items-center">
+                <div class="d-flex justify-content-center align-items-center">
+                  <div><h1 class="text-center text-darker mb-0">ENVOIE TA CARTE D'IDENTITÉ ET INSCRIS-TOI !</h1></div>
+                </div>
+                <div class="d-flex w-75 justify-content-center align-items-start">
+                  <a class="nav-link mt-3 btn btn-sm btn-default bg-dark no-bg-image w-100" href="../app/index.php" target="_blank">
+                    <p class="didit-letsgo mt-1 mb-1">Let's go!</p>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
