--- a/webpage/index.html
+++ b/webpage/index.html
@@ -240,8 +240,12 @@
                       Des communautés bienveillantes
                     </h2>
                     <p class="card-description text-left">
-                      Chaque profil est vérifié pour créer un envrionnement sécurisé, tu peux donc profiter
-                      sans limite !
+                      La Gélateam a mis en place un univers de création coopératif rien que pour toi.
+                      Il est donc inimaginable que des communautés malsaines apparaissent et prolifèrent.
+                      Ainsi, les fake news et autres trolls qui ne suivent pas nos
+                      <a href="./pages/politics-content.html">conditions</a> seront totalement absents
+                      de la plateforme rendant les échanges cordiaux en toutes circonstances.
+                      Alors profitez et inscrivez-vous dès maintenant sur Didit !
                     </p>
                   </div>
                 </div>
@@ -253,10 +257,10 @@
                       Tendances actuelles des communautés
                     </h2>
                     <ul class="community-list" class="text-left">
-                      <li><img class="community-logo" src="assets/img/logo-dance.png" />d/MusicalDances</li>
+                      <li><img class="community-logo" src="assets/img/logo-antivax.png" />d/Antivax</li>
                       <li><img class="community-logo" src="assets/img/logos-lego.png" />d/Lego  <i class="fas fa-check-circle"></i> </li>
                       <li><img class="community-logo" src="assets/img/logo-chatmi-thon.png" />d/dumbCatChallenges</li>
-                      <li><img class="community-logo" src="assets/img/logo-workout.png" />d/StreetWorkout</li>
+                      <li><img class="community-logo" src="assets/img/logo-incels.png" />d/Incels</li>
                       <li><img class="community-logo" src="assets/img/logo-cochondinde.png" />d/CoursesDeCochonDinde</li>
                     </ul>
                   </div>
@@ -272,7 +276,7 @@
               </div>
               <div class="col-md-6 col-lg-7 d-flex flex-column justify-content-center align-items-center">
                 <div class="d-flex justify-content-center align-items-center">
-                  <div><h1 class="text-center text-darker mb-0">ENVOIE TA CARTE D'IDENTITÉ ET INSCRIS-TOI !</h1></div>
+                  <div><h1 class="text-center text-darker mb-0">ENVOIE TA CARTE D'IDENTITÉ* ET INSCRIS-TOI !</h1></div>
                 </div>
                 <div class="d-flex w-75 justify-content-center align-items-start">
                   <a class="nav-link mt-3 btn btn-sm btn-default bg-dark no-bg-image w-100" href="../app/index.php" target="_blank">
@@ -280,6 +284,7 @@
                   </a>
                 </div>
               </div>
+              <p class="font-mini">*Pour une preuve d'identité plus fiable, les informations collectées lors de votre inscription sont les suivantes: nom, prénoms, adresse, numéro de téléphone, adresse mail, visage, couleur des yeux et des cheveux, taille, poids, âge, animaux de compagnie, prénom de la soeur, historique de navigation, favoris, cookies, sites visités, amis, contacts téléphoniques, journal d'appel, données de la caméra et du microphone, voix, déplacements de la souris, dynamique de frappe au clavier, centres d'intérêts, groupe sanguin, signe astrologique, signe du zodiaque chinois, couleur préférée, police de caractère préférée, diplômes, maladies et allergies, handicaps, religion, orientation politique, engagement syndical, cartes bancaires, numéro de sécurité sociale, nationalité, ethnie, sexe. Cette liste est non exhaustive.</p>
             </div>
           </div>
         </div>
