--- a/webpage/index.html
+++ b/webpage/index.html
@@ -119,7 +119,7 @@
         <div class="custom-div-title content-center brand">
           <img class="img rounded custom-title-didit" src="assets/img/logo-didit.svg">
         </div>
-        <div class="custom-div-subtitle t-sm-55 t-md-53 t-lg-59 t-xl-61 content-center brand">
+        <div class="custom-div-subtitle t-sm-55 t-md-53 t-lg-59 t-xl-61 t-xxl-70 content-center brand">
           <h3 class="custom-didit-subtitle font-size-1 font-md-default">Un réseau qui vous veut du bien</h3>
         </div>
       </div>
