--- a/webpage/pages/doc-technical.html
+++ b/webpage/pages/doc-technical.html
@@ -85,6 +85,9 @@
               <a class="dropdown-item" href="./politics-confident.html">
                 <i class="tim-icons icon-align-left-2"></i> Politique de Confidentialité
               </a>
+              <a class="dropdown-item" target="_blank" href="https://www.echosciences-normandie.fr/articles/didit-un-reseau-de-challenges-pass-ionnant">
+                <i class="tim-icons icon-align-left-2"></i> Notre article sur Echosciences
+              </a>
             </div>
           </li>
           <li class="nav-item">
@@ -128,9 +131,10 @@
             <br/>
             <h3 class="title">Avec quoi ça marche ?</h3>
               <p>
-                  Langages de programmation : HTML, CSS, JavaScript, PHP
-                  Framework : Bootstrap
-                  IDE : IntellIij, PHPStorm, WinSCP, Xampp, Wamp…
+                  Langages de programmation : HTML, CSS, JavaScript, PHP<br/>
+                  Framework : Bootstrap<br/>
+                  IDE : IntellIij, PHPStorm, WinSCP, Xampp, Wamp…<br/>
+                  <a href="https://gitlab.ecole.ensicaen.fr/guignol/didit">Lien du Gitlab</a>
               </p>
             <br/>
             <h3 class="title">Prérequis pour l’installation</h3>
