--- a/webpage/pages/politics-confident.html
+++ b/webpage/pages/politics-confident.html
@@ -85,6 +85,9 @@
               <a class="dropdown-item" href="./politics-confident.html">
                 <i class="tim-icons icon-align-left-2"></i> Politique de Confidentialité
               </a>
+              <a class="dropdown-item" target="_blank" href="https://www.echosciences-normandie.fr/articles/didit-un-reseau-de-challenges-pass-ionnant">
+                <i class="tim-icons icon-align-left-2"></i> Notre article sur Echosciences
+              </a>
             </div>
           </li>
           <li class="nav-item">
