--- a/webpage/pages/sujet.html
+++ b/webpage/pages/sujet.html
@@ -85,6 +85,9 @@
               <a class="dropdown-item" href="./politics-confident.html">
                 <i class="tim-icons icon-align-left-2"></i> Politique de Confidentialité
               </a>
+              <a class="dropdown-item" target="_blank" href="https://www.echosciences-normandie.fr/articles/didit-un-reseau-de-challenges-pass-ionnant">
+                <i class="tim-icons icon-align-left-2"></i> Notre article sur Echosciences
+              </a>
             </div>
           </li>
           <li class="nav-item">
@@ -113,6 +116,12 @@
         <div class="row">
           <div class="col-md-8 ml-auto mr-auto">
             <h6 class="category">14 Janvier, 2022</h6>
+            <p>
+                  Notre projet consiste en une prise de recul et une critique des réseaux sociaux actuels, des
+                  challenges potentiellement dangereux, et de la négativité sur les réseaux en général (faux comptes,
+                  trolls, harceleurs...). Dans notre tentative de création d'un réseau social bienveillant et sécurisé,
+                  malgré tous les moyens mis en place, on imagine que les dérives seront inévitables.
+            </p>
             <h3 class="title">Les risques des réseaux</h3>
               <p>
                   Les réseaux sociaux sont de plus en plus nombreux, et occupent une grande partie du quotidien des jeunes
